welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:10: error: not found: value color
  FleurHaut(color.blue)
            ^